--- a/src/util/struct_array_layout.js.ejs
+++ b/src/util/struct_array_layout.js.ejs
@@ -21,6 +21,7 @@ for (const member of members) {
  * @private
  */
 class <%=StructArrayLayoutClass%> extends StructArray {
+    view: <%=usedTypes[0]%>Array;
 <%
 for (const type of usedTypes) {
 -%>
@@ -31,9 +32,9 @@ for (const type of usedTypes) {
 
     _refreshViews() {
 <%
-for (const type of usedTypes) {
+for (const [i, type] of Object.entries(usedTypes)) {
 -%>
-        this.<%=type.toLowerCase()%> = new <%=type%>Array(this.arrayBuffer);
+        <%if (i === 0) {%>this.view = <%}%>this.<%=type.toLowerCase()%> = new <%=type%>Array(this.arrayBuffer);
 <%
 }
 -%>
@@ -75,6 +76,9 @@ for (const size of usedTypeSizes) {
 }
 
 let argIndex = 0;
+-%>
+        const {<%=usedTypes.map(t => t.toLowerCase()).join(', ')%>} = this;
+<%
 for (const member of members) {
     for (let c = 0; c < member.components; c++) {
         // The index for `member` component `c` into the appropriate type array is:
@@ -83,7 +87,7 @@ for (const member of members) {
         // offset of this member into the array
         const index = `o${member.size.toFixed(0)} + ${(member.offset / member.size + c).toFixed(0)}`;
 -%>
-        this.<%=member.view%>[<%=index%>] = v<%=argIndex++%>;
+        <%=member.view%>[<%=index%>] = v<%=argIndex++%>;
 <%
     }
 }
