--- a/src/util/struct_array_layout.js.ejs
+++ b/src/util/struct_array_layout.js.ejs
@@ -95,4 +95,4 @@ for (const member of members) {
 }
 
 <%=StructArrayLayoutClass%>.prototype.bytesPerElement = <%= size %>;
-register('<%=StructArrayLayoutClass%>', <%=StructArrayLayoutClass%>);
+register(<%=StructArrayLayoutClass%>);
