--- a/src/util/struct_array.js.ejs
+++ b/src/util/struct_array.js.ejs
@@ -87,6 +87,7 @@ if (useComponentGetters) {
      */
     get(index: number): <%=StructTypeClass%> {
         assert(!this.isTransferred);
+        assert(index < this.length);
         return new <%=StructTypeClass%>(this, index);
     }
 <%
