Fix icons with no image causing other missing icons (#12299)
* Fix missing icons, updating comments

* Adding test

* Asserting valid indexes for all struct creation

--- a/src/util/struct_array.js.ejs
+++ b/src/util/struct_array.js.ejs
@@ -87,6 +87,8 @@ if (useComponentGetters) {
      */
     get(index: number): <%=StructTypeClass%> {
         assert(!this.isTransferred);
+        assert(index >= 0);
+        assert(index < this.length);
         return new <%=StructTypeClass%>(this, index);
     }
 <%
