--- a/src/style/style_layer/layer_properties.js.ejs
+++ b/src/style/style_layer/layer_properties.js.ejs
@@ -1,27 +1,29 @@
 <%
-  const type = locals.type;
-  const layoutProperties = locals.layoutProperties;
-  const paintProperties = locals.paintProperties;
+  const type = locals.layer.type;
+  const layoutProperties = locals.layer.layoutProperties;
+  const paintProperties = locals.layer.paintProperties;
+  const srcDir = locals.srcDir;
+  const styleDir =  locals.styleDir;
 -%>
 // This file is generated. Edit build/generate-style-code.js, then run `yarn run codegen`.
 // @flow
 /* eslint-disable */
 
-import styleSpec from '../../style-spec/reference/latest.js';
+import styleSpec from '<%= srcDir -%>/style-spec/reference/latest.js';
 
 import {
     Properties,
     DataConstantProperty,
     DataDrivenProperty,
     ColorRampProperty
-} from '../properties.js';
+} from '<%= styleDir -%>/properties.js';
 
-import type Color from '../../style-spec/util/color.js';
+import type Color from '<%= srcDir -%>/style-spec/util/color.js';
 
-import type Formatted from '../../style-spec/expression/types/formatted.js';
+import type Formatted from '<%= srcDir %>/style-spec/expression/types/formatted.js';
 
-import type ResolvedImage from '../../style-spec/expression/types/resolved_image.js';
-<%
+import type ResolvedImage from '<%= srcDir -%>/style-spec/expression/types/resolved_image.js';
+<% 
 const overridables = paintProperties.filter(p => p.overridable)
 if (overridables.length) { -%>
 
