[MAPS3D-672] Add styling interpretation and enable 3d lights rendering (internal-457)
* Add lighting prelude

* Add lights uniforms

* Fork with LIGHTING_3D_MODE_NO_EMISSION until supported in gl-js

* Interpret light data and send uniforms

* Cleanup legacy lights

* Simplify codegen

* Add docs

--- a/3d-style/style/light_properties.js.ejs
+++ b/3d-style/style/light_properties.js.ejs
@@ -10,7 +10,8 @@ import styleSpec from '../../src/style-spec/reference/latest.js';
 
 import {
     Properties,
-    DataConstantProperty
+    DataConstantProperty,
+    DirectionProperty,
 } from '../../src/style/properties.js';
 
 import type Color from '../../src/style-spec/util/color.js';
@@ -18,13 +19,13 @@ import type Color from '../../src/style-spec/util/color.js';
 <% if (properties.length) { -%>
 export type LightProps = {|
 <% for (const property of properties) { -%>
-    "<%= property.name %>": <%- propertyType(property) %>,
+    "<%= property.name %>": <%- propertyType(type, property) %>,
 <% } -%>
 |};
 
 const properties: Properties<LightProps> = new Properties({
 <% for (const property of properties) { -%>
-    "<%= property.name %>": <%- propertyValue(property, 'properties') %>,
+    "<%= property.name %>": <%- propertyValue(type, property, 'properties') %>,
 <% } -%>
 });
 <% } -%>
