--- a/src/style/style_layer/layer_properties.js.ejs
+++ b/src/style/style_layer/layer_properties.js.ejs
@@ -36,20 +36,20 @@ import {
 <% if (layoutProperties.length) { -%>
 export type LayoutProps = {|
 <% for (const property of layoutProperties) { -%>
-    "<%= property.name %>": <%- propertyType(property) %>,
+    "<%= property.name %>": <%- propertyType(type, property) %>,
 <% } -%>
 |};
 
 const layout: Properties<LayoutProps> = new Properties({
 <% for (const property of layoutProperties) { -%>
-    "<%= property.name %>": <%- propertyValue(property, 'layout') %>,
+    "<%= property.name %>": <%- propertyValue(type, property, 'layout') %>,
 <% } -%>
 });
 <% } -%>
 <% if(paintProperties.length){ %>
 export type PaintProps = {|
 <% for (const property of paintProperties) { -%>
-    "<%= property.name %>": <%- propertyType(property) %>,
+    "<%= property.name %>": <%- propertyType(type, property) %>,
 <% } -%>
 |};
 <% } else{ %>
@@ -57,7 +57,7 @@ export type PaintProps = {};
 <% } %>
 const paint: Properties<PaintProps> = new Properties({
 <% for (const property of paintProperties) { -%>
-    "<%= property.name %>": <%- propertyValue(property, 'paint') %>,
+    "<%= property.name %>": <%- propertyValue(type, property, 'paint') %>,
 <% } -%>
 });
 
